--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html, body {
 
 h1 {
 	border-bottom: solid 1px #00bff3;
-	color: #2b2b2b;
+	color: #5b5b5b;
 	font: normal 28px Tahoma, Arial, sans-serif;
 	line-height: 30px;
 	margin: 10px 0 15px 0;
@@ -32,15 +32,18 @@ h3 {
 	text-transform: uppercase;
 }
 
-.btn-default {
+/*.btn-default {
 	background-color: #00bff3;
 	color: #ffffff;
-}
+}*/
 
 .faded {
 	opacity: 0.3;
 }
 
+.help-block {
+	font-weight: normal;
+}
 
 /* === STRUCTURE === */
 header {
@@ -127,4 +130,137 @@ nav {
 	color: #666666;
 	padding: 20px 30px;
 	text-transform: uppercase;
+}
+
+.navbar-default .navbar-nav li.active a,
+.navbar-default .navbar-nav li.active a:hover,
+.navbar-default .navbar-nav li a:hover {
+	background-color: #00bff3;
+	color: #ffffff;	
+}
+
+.navbar-defalt .navbar-toggle:hover {
+	background-color: #00bff3;
+}
+
+.navbar-collapse {
+	background-color: #fff;
+	bottom: 0;
+	position: absolute;
+	right: 0;
+}
+
+.navbar-collapse ul {
+	margin-left: 0;
+}
+
+/* === CONTENT === */
+.nav-pills li a {
+	color: #5b5b5b;
+}
+
+.nav-pills li a:hover {
+	background-color: #00bff3;
+	color: #ffffff;
+}
+
+.nav-pills li.active a,
+.nav-pills li.active a:hover {
+	background-color: #00bff3;
+}
+
+.panel-primary {
+	border-color: #00bff3;
+	margin: 30px 0;
+}
+
+.panel-primary .panel-heading {
+	background-color: #00bff3;
+	border-bottom-color: #00bff3;
+}
+
+.panel-heading a,
+.panel-heading a:hover {
+	color: #ffffff;
+	text-decoration: none;
+}
+
+.panel-heading a:after {
+	content: "\f107";
+    float: right;
+    font-family: 'FontAwesome';
+    font-size: 1.3em;
+}
+
+.panel-heading a.collapsed:after {
+    content: "\f105";
+    float: right;
+    font-family: 'FontAwesome';
+    font-size: 1.3em;
+}
+
+.panel-body {
+	padding: 10px;
+}
+
+table input {
+	width: 100%;
+}
+
+.table {
+	margin-bottom: 10px;
+}
+
+/* === MOBILE STYLES === */
+@media(max-width: 767px) {
+	header {
+		height: 77px;
+	}
+
+	.container-fluid {
+		height: calc(100% - 77px); /* body (=100%) - header (=77px) */
+	}
+	
+	.navbar {
+		border: 0;
+		border-bottom: 3px solid #00bff3;
+		height: 77px;
+	}
+
+	.logo {
+		background-size: 100% 100%;
+		height: 96px;
+		margin-left: 20px;
+		width: 150px;
+	}
+
+	.navbar-default .navbar-toggle {
+		margin-top: 17px;
+	}
+	
+	.navbar-default .navbar-collapse {
+		border: 0;
+		border-top: 1px solid #cccccc;
+		border-bottom: 3px solid #00bff3;
+		margin: 3px 0 0 0;
+		padding: 0;
+		position: relative;
+	}
+	
+	.navbar-default .navbar-collapse ul li {
+		border-bottom: 1px solid #cccccc;
+	}
+
+	.navbar-default .navbar-nav li:hover {
+		/*border-top: 1px solid #ffffff;
+		border-bottom: 1px solid #ffffff;*/
+	}
+	
+	.navbar-default .navbar-nav {
+		width: 100%;
+	}
+	
+	.container-fluid {
+		height: calc(100% - 77px); /* body (=100%) - header (=77px) */
+	}
 }
