--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,10 @@ table input {
 	margin-bottom: 10px;
 }
 
+.table .form-group {
+	margin-bottom: 0;
+}
+
 /* === MOBILE STYLES === */
 @media(max-width: 767px) {
 	header {
