restart func. impl., config adapted to server

--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,10 @@ h3 {
 	text-transform: uppercase;
 }
 
-/*.btn-default {
+.btn-default {
 	background-color: #00bff3;
 	color: #ffffff;
-}*/
+}
 
 .faded {
 	opacity: 0.3;
